force-app/main/default/objects/SBQQ__LookupQuery__c/SBQQ__LookupQuery__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__LookupQueryHelp</customHelpPage>
    <label>Lookup Query</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lookup Query #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Queries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>