force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__MatchType__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MatchType__c</fullName>
    <description>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</description>
    <inlineHelpText>If Match Type = Field Value, select a Tested Object and Tested Field. If Match Type = Static Value, enter the value into Tested Value. If Match Type = Configuration Attribute, specify a Configuration Attribute.</inlineHelpText>
    <label>Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Field Value</fullName><default>false</default><label>Field Value</label></value>
            <value><fullName>Static Value</fullName><default>false</default><label>Static Value</label></value>
            <value><fullName>Configuration Attribute Value</fullName><default>false</default><label>Configuration Attribute Value</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>