force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__Operator__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Operator__c</fullName>
    <description>The operator that is applied when comparing the Field with the Value.</description>
    <inlineHelpText>The operator that is applied when comparing the Field with the Value.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>equals</fullName><default>false</default><label>equals</label></value>
            <value><fullName>not equals</fullName><default>false</default><label>not equals</label></value>
            <value><fullName>less than</fullName><default>false</default><label>less than</label></value>
            <value><fullName>less or equals</fullName><default>false</default><label>less or equals</label></value>
            <value><fullName>greater than</fullName><default>false</default><label>greater than</label></value>
            <value><fullName>greater or equals</fullName><default>false</default><label>greater or equals</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>