force-app/main/default/objects/SBQQ__LookupQuery__c/fields/SBQQ__TestedField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__TestedField__c</fullName>
    <description>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</description>
    <inlineHelpText>Field on Quote, Quote Line or Product Option object that is evaluated by this query. Required if Match Type = Field Value.</inlineHelpText>
    <label>Tested Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Product Code</fullName><default>false</default><label>Product Code</label></value>
            <value><fullName>SBQQ__OptionalSKU__c</fullName><default>false</default><label>SBQQ__OptionalSKU__c</label></value>
            <value><fullName>MandatoryFor__c</fullName><default>false</default><label>MandatoryFor__c</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>